Refactoring: Remove warnings from IntelliJ IDEA; use new switch syntax